--- a/corso/src/main/res/layout/activity_dynamic_fragments.xml
+++ b/corso/src/main/res/layout/activity_dynamic_fragments.xml
@@ -9,6 +9,18 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:id="@+id/btn_swap"/>
+<Button
+    android:text="START!!!!"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/btn_start_task"/>
+
+    <TextView
+        android:id="@+id/tv_result_wow"
+        android:textSize="30sp"
+        android:hint="empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <FrameLayout
         android:id="@+id/host"
